<resources>
    <string name="app_name">Capstone Invest</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="investment_category">Investment Category</string>
    <string name="financial_assets">Financial Assets</string>
    <string name="financial_support">Financial Support</string>
    <string name="financial_support_hint">Value of support</string>
    <string name="create_category">Create Category:</string>
    <string name="create_financial_asset">Create Financial Asset:</string>
    <string name="create_financial_support_cycle">Create Financial Support Cycle:</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_investment_category">New Investment Category</string>
    <string name="cancel">Cancel</string>
    <string name="add_category_name">Category name</string>
    <string name="add_financial_asset_name">Financial Asset name</string>
    <string name="add_financial_asset_value">Financial Asset value</string>
    <string name="cd_icon_view_total_invested">Total invested visible</string>
    <string name="cd_icon_do_not_view_total_invested">Total invested invisible</string>
    <string name="cd_icon_investments_category">Icon account balance</string>
    <string name="total_invested">Total Invested:</string>
    <string name="real">R$ %s</string>
    <string name="money">R$:</string>
    <string name="categories_when_have_none">Please, create categories for your investments!</string>
    <string name="financial_asset_when_have_none">Please, create financial assets for your investments!</string>
    <string name="financial_support_when_have_none">No financial support active. Please, add new one!</string>
    <string name="weight">Weight:</string>
    <string name="update_weight">Update weight</string>
    <string name="warning_max_weight">The maximum value of all weight must be 100!</string>
    <string name="empty_category">Empty category!</string>
    <string name="fill_all_fields">Fill all fields!</string>
    <string name="warning_financial_asset_value">Financial Asset must have value greater than 0!</string>
    <string name="warning_financial_support_value">Financial Support must have value greater than 0!</string>
    <string name="amount">amount</string>
    <string name="bid">Bid</string>
    <string name="purchase">Purchase</string>
    <string name="close_financial_support">Close Support</string>
    <string name="appwidget_text">Portfolio R$: %s</string>
    <string name="add_widget">Add widget</string>
    <string name="warning_first_create_investment_catgories">Please, you must first create Investment Categories!</string>
    <string name="warning_first_create_financial_assets">Please, you must first create Financial Assets!</string>
</resources>
