<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="300dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_financial_support_cycle"
            android:textSize="@dimen/dialog_title"
            android:layout_marginTop="@dimen/margin_default_dialog"
            android:layout_marginStart="@dimen/margin_default_dialog"
            style="@style/Theme.AppCompat.DayNight.Dialog"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money"
                android:textSize="@dimen/dialog_title"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                style="@style/Theme.AppCompat.DayNight.Dialog"
                />
            <EditText
                android:id="@+id/et_dialog_financial_support_cycle_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/Theme.Dialog"
                android:textSize="@dimen/dialog_text"
                android:hint="@string/financial_support_hint"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/margin_default"
                android:inputType="numberDecimal"
                android:importantForAutofill="no"
                tools:targetApi="o" />
        </LinearLayout>

        <include layout="@layout/view_buttons_create_cancel"
            android:id="@+id/view_buttons_create_cancel_financial_support"/>

    </LinearLayout>
</layout>
