<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <import type="android.view.View"/>
        <variable
            name="showTotal"
            type="Boolean"
            />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.MainActivity"
        tools:showIn="@layout/app_bar_main">

        <ImageView
            android:id="@+id/iv_view_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_ic_view_min_height"
            android:minWidth="@dimen/dimen_ic_view_min_width"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_view_values"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cd_icon_view_total_invested"
            />

        <ImageView
            android:id="@+id/iv_view_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_ic_view_block_min_height"
            android:minWidth="@dimen/dimen_ic_view_block_min_width"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_view_block"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cd_icon_do_not_view_total_invested"
            android:visibility="@{showTotal ? View.INVISIBLE : View.VISIBLE, default=invisible}"
            />

        <TextView
            android:id="@+id/tv_total_invested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/total_invested"
            android:textSize="@dimen/dimen_main_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_view_block"
            android:visibility="@{showTotal ? View.VISIBLE : View.INVISIBLE, default=visible}"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/real"
            android:textSize="@dimen/dimen_main_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_invested"
            android:visibility="@{showTotal ? View.VISIBLE : View.INVISIBLE, default=visible}"
            />

    </android.support.constraint.ConstraintLayout>
</layout>
