<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <data>
        <import type="android.view.View"/>
        <variable
            name="hasFinancialSupport"
            type="Boolean"
            />
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tv_no_financial_support"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:text="@string/financial_support_when_have_none"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:visibility="@{hasFinancialSupport ? View.INVISIBLE : View.VISIBLE, default=invisible}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_financial_support_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:textSize="@dimen/dimen_main_view"
            android:text="@string/financial_support"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="@{hasFinancialSupport ? View.VISIBLE : View.INVISIBLE, default=invisible}"
            />

        <TextView
            android:id="@+id/tv_financial_support_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/money"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/dimen_main_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_financial_support_text"
            android:visibility="@{hasFinancialSupport ? View.VISIBLE : View.INVISIBLE, default=invisible}"
            />

        <EditText
            android:id="@+id/tv_financial_support_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/dimen_asset_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_financial_support_money"
            app:layout_constraintTop_toBottomOf="@+id/tv_financial_support_text"
            android:inputType="numberDecimal"
            android:hint="@string/financial_support_hint"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:visibility="@{hasFinancialSupport ? View.VISIBLE : View.INVISIBLE, default=invisible}"
            />

        <Button
            android:id="@+id/bt_close_financial_support"
            style="@style/Theme.AppCompat.DayNight.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:background="@color/colorTransparent"
            android:clickable="true"
            android:drawableStart="@drawable/ic_purchase_asset_support"
            android:focusable="true"
            android:foreground="@drawable/ripple_effect"
            android:paddingStart="@dimen/margin_default"
            android:paddingEnd="@dimen/margin_default"
            android:text="@string/close_financial_support"
            android:textSize="@dimen/dialog_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_financial_support_value"
            android:visibility="@{hasFinancialSupport ? View.VISIBLE : View.INVISIBLE, default=invisible}"
            />

        <View
            android:id="@+id/divider_asset_support"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:background="@color/colorDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_close_financial_support"
            android:visibility="@{hasFinancialSupport ? View.VISIBLE : View.INVISIBLE, default=invisible}"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_financial_support"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_asset_support"
            android:visibility="@{hasFinancialSupport ? View.VISIBLE : View.INVISIBLE, default=invisible}"
            />


    </android.support.constraint.ConstraintLayout>
</layout>
